<resources xmlns:tools="http://schemas.android.com/tools"
    tools:locale="pt">
    <string name="app_name">Pricer</string>
    <string name="menu">Menu</string>
    <string name="filter">Filter</string>
    <string name="about_us">Sobre Nós</string>
    <string name="email">Email</string>
    <string name="login">Entrar</string>
    <string name="password">Password</string>
    <string name="create_account">Criar Conta</string>
    <string name="logout">Sair</string>
    <string name="repeat_password">Repetir password</string>
    <string name="settings">Definições</string>
    <string name="home">Início</string>
    <string name="change_password">Mudar Password</string>
    <string name="menu_open">Menu Aberto</string>
    <string name="menu_closed">Menu Fechado</string>
    <string name="info">Informação</string>
    <string name="contacts">Contactos</string>
    <string name="stores">Lojas</string>
    <string name="category">Categorias</string>
    <string name="see_password">Ver password</string>
    <string name="see_repeat_password">Ver Repetir Password</string>
    <string name="order">Ordenar</string>
    <string name="repeat_new_password">Repetir Nova Password</string>
    <string name="new_password">Nova Password</string>
    <string name="barcode_reader">Leitor código de barras</string>
    <string name="password_error">Password tem de ter 6 caracteres, 1 maiúsculo e 1 número</string>
    <string name="password_error_equal">Passwords tem de ser iguais</string>
    <string name="email_error">Coloque um email válido</string>
    <string name="error_message">Ocorreu um erro</string>
    <string name="ascending_price">Preço Ascendente</string>
    <string name="descending_price">Preço Descendente</string>
    <string name="cancelled">Cancelado</string>
    <string name="result_scan">Resultado do Scan</string>
    <string name="product_not_found">\"Não foi encontrado o produto \"</string>
    <string name="search_in_web_question">Deseja pesquisá-lo na internet?</string>
    <string name="search">Pesquisar</string>
    <string name="cancel">Cancelar</string>
    <string name="select_category">Selecione Categorias</string>
    <string name="select_store">Selecione Lojas</string>
    <string name="order_by">Ordenar por</string>
    <string name="scan_prompt">Clique no butão Aumentar Volume para ligar Flash</string>
    <string name="password_changed">Password alterada</string>
    <string name="barcode_unknown">EAN Desconhecido</string>
    <string name="barcode">EAN </string>
    <string name="account">Conta</string>
    <string name="language">Linguagem</string>
    <string name="application_developed">Aplicação desenvolvida no ambito:</string>
    <string name="software_engineering_course">Curso Engenharia de Software</string>
    <string name="subject_dam">Disciplina de Desenvolvimento de Aplicações móveis</string>
    <string name="school_year">Ano letivo 2022/2023</string>
    <string name="by_students">Pelos alunos:</string>
    <string name="angela">Ângela Reis nº20946</string>
    <string name="miguel">Miguel Modesto nº23033</string>
    <string name="used_libraries">Foram utilizadas as bibliotecas:</string>
    <string name="retrofit2">Retrofit2</string>
    <string name="zxing_android_embedded">Zxing-android-embedded</string>
    <string name="credentials">Credenciais para aceder à aplicação:</string>
    <string name="email_credential">pricer.test.app@gmail.com</string>
    <string name="password_credential">Pricer2023</string>
    <string name="font" translatable="false">sans-serif-condensed</string>
    <string name="follow_location">Bloquear na localização</string>
    <string name="osmdroid">osmdroid</string>
    <string name="osmbonuspack">osmbonuspack</string>
    <string name="error_route">Erro ao carregar a estrada </string>
    <string name="error_route_invalid">Estrada ainda não foi construída</string>
    <string name="error_route_technical_issues">Erros técnicos</string>
    <string name="no_store_locations">Nenhuma loja encontrada</string>
    <string name="error_store_locations">Erro ao procurar localizações de lojas</string>
    <string name="network_error_store_locations">Erro de rede ao pesquisar por lojas</string>
    <string name="show_route">Mostrar caminho</string>
    <string name="stop_show_route">Parar de mostrar caminho</string>
</resources>