<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ChangePassFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtOldPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:ems="15"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="50dp" />


            <ImageButton
                android:id="@+id/btnSeeOldPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/txtOldPassword"
                android:contentDescription="@string/see_password"
                android:minHeight="48dp"
                android:src="@drawable/ic_baseline_eye" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:ems="15"
                android:hint="@string/new_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="50dp" />


            <ImageButton
                android:id="@+id/btnSeePass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/txtPassword"
                android:contentDescription="@string/see_password"
                android:minHeight="48dp"
                android:src="@drawable/ic_baseline_eye" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtRepeatPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:ems="15"
                android:hint="@string/repeat_new_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="50dp" />


            <ImageButton
                android:id="@+id/btnSeeRepPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/txtRepeatPassword"
                android:contentDescription="@string/see_repeat_password"
                android:minHeight="48dp"
                android:src="@drawable/ic_baseline_eye" />

        </RelativeLayout>

        <Button
            android:id="@+id/buttonChangePass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:text="@string/change_password" />
    </LinearLayout>


</FrameLayout>